docs: record FAPI-1 evidence and task completion